--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-image: url(/assets/tumblr_mx1j8pum9z1s41isho1_1280.jpg);
+    background-image: url(/assets/tumblr_mx1j8pum9z1s41isho1_1280.jpg); 
     padding: 50px 50px 50px 50px;
     background-size: cover;
 
@@ -57,7 +57,11 @@ header nav {
 .logo {
    display: flex;
     justify-content: center;
+    width: 200px; /* Ajusta el ancho a tu gusto */
+  height: 50px; /* Ajusta la altura a tu gusto */
 }
+
+
 
 header{
 
@@ -72,6 +76,7 @@ header nav span {
     font-size: 32px;
     color: white;
     border-radius: 10px;
+    margin-inline-start: 10px
     
 
 }
