--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ main h1 {
 .canciones {
 
     display: flex;
-    padding: 0px 100px;
+    padding: 0px 50px;
 
 }
 
@@ -151,27 +151,20 @@ main h1 {
 
 .reproductor {
 
-    width: 300px;
-    height: 200px;
-    background-color: #222;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
 }
 
-.reproductor img {
+.portada-del-album {
 
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    filter: grayscale(50%) brightness(0.8);
+border-radius: 20px;
+width: 420px;
+height: 414px;
 
 }
-
-
 
 .cancion-info h2{
     text-align: center;
@@ -188,12 +181,21 @@ main h1 {
     font-size: 26px;
 }
 
+.cancion-info {
+
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+
 .controles {
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.726);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    padding: 10px 106px; 
 }
 
 .controles button {
@@ -210,11 +212,18 @@ main h1 {
     width: 50%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     
+
 }
 
 .lista-canciones {
 
     display: flex;
     flex-grow: 1;
+    justify-content: start;
+    height: 900px;
+    overflow: auto;
 }
+
