--- a/style.css
+++ b/style.css
@@ -160,13 +160,21 @@ main h1 {
 
 .portada-del-album {
 
-border-radius: 20px;
-width: 420px;
-height: 414px;
+    border-radius: 20px;
+    width: 420px;
+    height: 414px;
 
 }
 
-.cancion-info h2{
+.audio-player-image {
+
+    border-radius: 20px;
+    width: 420px;
+    height: 414px;
+
+}
+
+.cancion-info h2 {
     text-align: center;
     color: #fff;
     font-weight: bold;
@@ -183,9 +191,9 @@ height: 414px;
 
 .cancion-info {
 
-display: flex;
-flex-direction: column;
-align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
@@ -195,7 +203,7 @@ align-items: center;
     background-color: rgba(0, 0, 0, 0.726);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding: 10px 106px; 
+    padding: 10px 106px;
 }
 
 .controles button {
@@ -214,7 +222,7 @@ align-items: center;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    
+
 
 }
 
@@ -226,4 +234,3 @@ align-items: center;
     height: 900px;
     overflow: auto;
 }
-
